// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PropertiesPanel > matches snapshot with select component 1`] = `
<div>
  <div
    class="properties-panel"
    data-testid="properties-panel"
  >
    <h3>
      Properties
    </h3>
    <div
      class="properties-form"
    >
      <div
        class="form-group"
      >
        <label
          for="component-label"
        >
          Label
        </label>
        <input
          class="form-control"
          id="component-label"
          type="text"
          value="Country"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="component-label"
        >
          Label
        </label>
        <input
          class="form-control"
          id="component-label"
          type="text"
          value="Country"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="component-placeholder"
        >
          Placeholder
        </label>
        <input
          class="form-control"
          id="component-placeholder"
          type="text"
          value=""
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="checkbox-label"
        >
          <input
            checked=""
            type="checkbox"
          />
          Required field
        </label>
      </div>
      <div
        class="form-group"
      >
        <label
          for="component-options"
        >
          Options (one per line)
        </label>
        <textarea
          class="form-control"
          id="component-options"
          rows="4"
        >
          [object Object]
[object Object]
[object Object]
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertiesPanel > matches snapshot with text input component 1`] = `
<div>
  <div
    class="properties-panel"
    data-testid="properties-panel"
  >
    <h3>
      Properties
    </h3>
    <div
      class="properties-form"
    >
      <div
        class="form-group"
      >
        <label
          for="component-label"
        >
          Label
        </label>
        <input
          class="form-control"
          id="component-label"
          type="text"
          value="Name"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="component-label"
        >
          Label
        </label>
        <input
          class="form-control"
          id="component-label"
          type="text"
          value="Name"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="component-placeholder"
        >
          Placeholder
        </label>
        <input
          class="form-control"
          id="component-placeholder"
          type="text"
          value="Enter your name"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="checkbox-label"
        >
          <input
            type="checkbox"
          />
          Required field
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertiesPanel > matches snapshot with textarea component 1`] = `
<div>
  <div
    class="properties-panel"
    data-testid="properties-panel"
  >
    <h3>
      Properties
    </h3>
    <div
      class="properties-form"
    >
      <div
        class="form-group"
      >
        <label
          for="component-label"
        >
          Label
        </label>
        <input
          class="form-control"
          id="component-label"
          type="text"
          value="Description"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="component-label"
        >
          Label
        </label>
        <input
          class="form-control"
          id="component-label"
          type="text"
          value="Description"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="component-placeholder"
        >
          Placeholder
        </label>
        <input
          class="form-control"
          id="component-placeholder"
          type="text"
          value="Enter description"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="checkbox-label"
        >
          <input
            checked=""
            type="checkbox"
          />
          Required field
        </label>
      </div>
      <div
        class="form-group"
      >
        <label
          for="component-rows"
        >
          Rows
        </label>
        <input
          class="form-control"
          id="component-rows"
          max="10"
          min="2"
          type="number"
          value="4"
        />
      </div>
    </div>
  </div>
</div>
`;
